force-app/main/default/objects/Task_Template__c/fields/Active_Route_Days__c.field-meta.xml
<CustomField>
    <fullName>Active_Route_Days__c</fullName>
    <description>Days of the week the duty applies
AJ TDFEnhance 16.6.20 Extended to reference collect Job if populated</description>
    <formula>IF(NOT(ISBLANK(Collect_From_Job_Template__c)),Collect_From_Job_Template__r.Active_Route_Days__c,
  IF(NOT(ISBLANK(Deliver_To_Job_Template__c)),Deliver_To_Job_Template__r.Active_Route_Days__c,
  Job_Template__r.Route_Template__r.Active_Route_Days__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Duty Days</label>
    <type>Text</type>
</CustomField>