force-app/main/default/objects/Task_Template__c/fields/Collect_From_Dock_Number__c.field-meta.xml
<CustomField>
    <fullName>Collect_From_Dock_Number__c</fullName>
    <label>Collect From Dock Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>