force-app/main/default/objects/Task_Template__c/fields/Collect_From_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Collect_From_Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The job the collection occurs at.  Can either be another job within the same duty, or the job for this task if created as a standalone</description>
    <label>Collect From Job Template</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <errorMessage>You can only select a collect from job template within the same duty as the deliver to task</errorMessage>
        <filterItems>
            <field>Job_Template__c.Route_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.DTID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Template__c</referenceTo>
    <relationshipLabel>Collect Task Templates</relationshipLabel>
    <relationshipName>Collect_Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>