force-app/main/default/objects/Task_Template__c/fields/Deliver_To_Dock_Number__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Dock_Number__c</fullName>
    <label>Deliver To Dock Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>