force-app/main/default/objects/Task_Template__c/fields/Deliver_To_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The job the task is delivering to. Can either be another job within the same duty, or the job for this task if created as a standalone.</description>
    <label>Deliver To Job Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a deliver to job template within the same duty as the collect from task</errorMessage>
        <filterItems>
            <field>Job_Template__c.Route_Template__c</field>
            <operation>equals</operation>
            <valueField>$Source.DTID__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Job_Template__c</referenceTo>
    <relationshipLabel>Deliver Task Templates</relationshipLabel>
    <relationshipName>Deliver_Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>