force-app/main/default/objects/Task_Template__c/fields/DTID__c.field-meta.xml
<CustomField>
    <fullName>DTID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct lookup to the Duty Template to allow filter constraint on Collect From Job Template and Deliver To Job Template.  Also it provides the ability to view and edit tasks in the main Duty Template screen</description>
    <label>Duty Template</label>
    <referenceTo>Route_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>