force-app/main/default/objects/Task_Template__c/fields/Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Job_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Template</label>
    <referenceTo>Job_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>