force-app/main/default/objects/Task_Template__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <label>Monday</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>