force-app/main/default/objects/Task_Template__c/fields/Monday_Route__c.field-meta.xml
<CustomField>
    <fullName>Monday_Route__c</fullName>
    <formula>Job_Template__r.Route_Template__r.Monday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Route</label>
    <type>Checkbox</type>
</CustomField>