force-app/main/default/objects/Task_Template__c/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <label>Sunday</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>