force-app/main/default/objects/Task_Template__c/fields/Sunday_Route__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Route__c</fullName>
    <formula>Job_Template__r.Route_Template__r.Sunday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Route</label>
    <type>Checkbox</type>
</CustomField>