force-app/main/default/objects/Task_Template__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collect Product</fullName>
            </value>
            <value>
                <fullName>Deliver Product</fullName>
            </value>
            <value>
                <fullName>Collect Trailer</fullName>
                <isActive>false</isActive>
                <label>Collect Trailer</label>
            </value>
            <value>
                <fullName>Deliver Trailer</fullName>
                <isActive>false</isActive>
                <label>Deliver Trailer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>