force-app/main/default/objects/Task_Template__c/validationRules/TDF_CollectFromOrDeliverToJobRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>TDF_CollectFromOrDeliverToJobRequired</fullName>
    <active>true</active>
    <description>Either a Collect From or Deliver To job must be specified</description>
    <errorConditionFormula>AND(ISBLANK( Collect_From_Job_Template__c ),
    ISBLANK( Deliver_To_Job_Template__c )
)</errorConditionFormula>
    <errorMessage>A Collect From or Deliver To Job Template must be specified</errorMessage>
</ValidationRule>