force-app/main/default/objects/Task_Template__c/validationRules/TDF_ULD_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>TDF_ULD_Product</fullName>
    <active>true</active>
    <description>A ULD collect or deliver task must use either &apos;ULD - Empty&apos; or &apos;ULD - Full&apos; as the product, not ULD.</description>
    <errorConditionFormula>AND( OR (TEXT(Task__c) = &apos;Collect Product&apos;,TEXT(Task__c) = &apos;Deliver Product&apos;),    Product__r.Name  = &apos;ULD&apos;)</errorConditionFormula>
    <errorMessage>A ULD collect or deliver task must use either &apos;ULD - Empty&apos; or &apos;ULD - Full&apos; as the product, not ULD.</errorMessage>
</ValidationRule>