force-app/main/default/objects/Task_Template__c/listViews/Task_List_Melbourne.listView-meta.xml
<ListView>
    <fullName>Task_List_Melbourne</fullName>
    <columns>Duty_Day_Start_Time__c</columns>
    <columns>Active_Route_Days__c</columns>
    <columns>Site__c</columns>
    <columns>Task__c</columns>
    <columns>Product__c</columns>
    <columns>Sunday__c</columns>
    <columns>Monday__c</columns>
    <columns>Tuesday__c</columns>
    <columns>Wednesday__c</columns>
    <columns>Thursday__c</columns>
    <columns>Friday__c</columns>
    <columns>Saturday__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>equals</operation>
        <value>Melbourne</value>
    </filters>
    <label>Task List - Melbourne</label>
    <language>en_US</language>
</ListView>